--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@keyframes sliceIn_left {
+@keyframes sliceIn_left { 
   0% {
     transform: translateX(-100px);
     opacity: 0; }
@@ -78,7 +78,7 @@ html, body, #main {
       background: #58b530;
       right: 0;
       animation-name: right; }
-
+/*彈跳視窗大小*/
 #nav {
   display: none; }
   #nav .sitename {
@@ -93,7 +93,32 @@ html, body, #main {
     flex-direction: column; }
   #nav a:hover {
     color: #0ff; }
+.modal-dialog {
+  width: 150%;
+  max-width: 600px
+}
 
+@media only screen and (max-width: 600px) {
+  .modal-dialog {
+    width: 100%;
+    max-width: 350px;
+    margin: 0 auto;
+  }
+  .modal-body img{
+    width: auto;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    max-width: 300px
+  }
+
+}
+pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  font-size: 11pt;
+  line-height: 20pt;
+}
 #main {
   display: none; }
   #main #home {
@@ -155,7 +180,7 @@ html, body, #main {
     background-color: #fff;
     font-size: 20pt;
     font-weight: bold; }
-  #main #product, #main #experiment, #main #about, #main #act, #main #QA,#main #recommend, #proof  {
+  #main #product, #main #experiment, #main #about, #main #act, #main #QA,#main #recommend,#main #proof  {
     padding-top: 100px;
     display: none;
     animation: sliceIn_down 1s 0.1s ease; }
@@ -170,60 +195,129 @@ html, body, #main {
       border: none;
       margin: 10px;
       padding: 10px; }
-  #main #product .container, #main #experiment .container {
+  #main #product .container,
+  #main #experiment .container,
+  #main #recommend .container,
+  #main #proof .container  {
     width: 100%; }
-    #main #product .container .row, #main #experiment .container .row {
+    #main #product .container .row,
+    #main #experiment .container .row ,
+    #main #recommend .container .row ,
+    #main #proof .container .row {
       padding: 0px 0;
       margin: 0; }
-    #main #product .container .col-md-3, #main #product .container .col-6, #main #experiment .container .col-md-3, #main #experiment .container .col-6 {
+    #main #product .container .col-md-3, #main #product .container .col-6,
+    #main #experiment .container .col-md-3, #main #experiment .container .col-6,
+    #main #recommend .container .col-md-3, #main #recommend .container .col-6,
+    #main #proof .container .col-md-3, #main #proof .container .col-6 {
       padding: 0;
       border-bottom: solid 10px #eee; }
-      #main #product .container .col-md-3 .card, #main #product .container .col-6 .card, #main #experiment .container .col-md-3 .card, #main #experiment .container .col-6 .card {
+      #main #product .container .col-md-3 .card, #main #product .container .col-6 .card,
+      #main #experiment .container .col-md-3 .card, #main #experiment .container .col-6 .card,
+      #main #recommend .container .col-md-3 .card, #main #recommend .container .col-6 .card,
+      #main #proof .container .col-md-3 .card, #main #proof .container .col-6 .card {
         background-color: #ddd;
         border: solid 1px #888;
         height: 250px; }
-        #main #product .container .col-md-3 .card a, #main #product .container .col-6 .card a, #main #experiment .container .col-md-3 .card a, #main #experiment .container .col-6 .card a {
+        #main #product .container .col-md-3 .card a, #main #product .container .col-6 .card a,
+        #main #experiment .container .col-md-3 .card a, #main #experiment .container .col-6 .card a,
+        #main #recommend .container .col-md-3 .card a, #main #recommend .container .col-6 .card a,
+        #main #proof .container .col-md-3 .card a, #main #proof .container .col-6 .card a {
           text-decoration: none;
           color: #000; }
-        #main #product .container .col-md-3 .card a:hover, #main #product .container .col-6 .card a:hover, #main #experiment .container .col-md-3 .card a:hover, #main #experiment .container .col-6 .card a:hover {
+        #main #product .container .col-md-3 .card a:hover, #main #product .container .col-6 .card a:hover,
+        #main #experiment .container .col-md-3 .card a:hover, #main #experiment .container .col-6 .card a:hover,
+        #main #recommend .container .col-md-3 .card a:hover, #main #recommend .container .col-6 .card a:hover,
+        #main #proof .container .col-md-3 .card a:hover, #main #proof .container .col-6 .card a:hover {
           color: #08a; }
-        #main #product .container .col-md-3 .card img, #main #product .container .col-6 .card img, #main #experiment .container .col-md-3 .card img, #main #experiment .container .col-6 .card img {
+        #main #product .container .col-md-3 .card img, #main #product .container .col-6 .card img,
+        #main #experiment .container .col-md-3 .card img, #main #experiment .container .col-6 .card img,
+        #main #recommend .container .col-md-3 .card img, #main #recommend .container .col-6 .card img,
+        #main #proof .container .col-md-3 .card img, #main #proof .container .col-6 .card img {
+          /*縮圖大小*/
           width: 160px;
           height: 160px;
           display: block;
           margin: 0 auto; }
-        #main #product .container .col-md-3 .card img:hover, #main #product .container .col-6 .card img:hover, #main #experiment .container .col-md-3 .card img:hover, #main #experiment .container .col-6 .card img:hover {
+        #main #product .container .col-md-3 .card img:hover, #main #product .container .col-6 .card img:hover,
+        #main #experiment .container .col-md-3 .card img:hover, #main #experiment .container .col-6 .card img:hover,
+        #main #recommend .container .col-md-3 .card img:hover, #main #recommend .container .col-6 .card img:hover,
+        #main #proof .container .col-md-3 .card img:hover, #main #proof .container .col-6 .card img:hover {
           transform: translateY(-10px);
           transition: 0.3s; }
-        #main #product .container .col-md-3 .card .card-img-top, #main #product .container .col-6 .card .card-img-top, #main #experiment .container .col-md-3 .card .card-img-top, #main #experiment .container .col-6 .card .card-img-top {
+        #main #product .container .col-md-3 .card .card-img-top, #main #product .container .col-6 .card .card-img-top,
+        #main #experiment .container .col-md-3 .card .card-img-top, #main #experiment .container .col-6 .card .card-img-top,
+        #main #recommend .container .col-md-3 .card .card-img-top, #main #recommend .container .col-6 .card .card-img-top,
+        #main #proof .container .col-md-3 .card .card-img-top, #main #proof .container .col-6 .card .card-img-top {
           padding: 10px; }
-        #main #product .container .col-md-3 .card .card-body, #main #product .container .col-6 .card .card-body, #main #experiment .container .col-md-3 .card .card-body, #main #experiment .container .col-6 .card .card-body {
+        #main #product .container .col-md-3 .card .card-body, #main #product .container .col-6 .card .card-body,
+        #main #experiment .container .col-md-3 .card .card-body, #main #experiment .container .col-6 .card .card-body,
+        #main #recommend .container .col-md-3 .card .card-body, #main #recommend .container .col-6 .card .card-body,
+        #main #proof .container .col-md-3 .card .card-body, #main #proof .container .col-6 .card .card-body {
           border-top: solid 1px #888; }
-          #main #product .container .col-md-3 .card .card-body p, #main #product .container .col-6 .card .card-body p, #main #experiment .container .col-md-3 .card .card-body p, #main #experiment .container .col-6 .card .card-body p {
+          #main #product .container .col-md-3 .card .card-body p, #main #product .container .col-6 .card .card-body p,
+          #main #experiment .container .col-md-3 .card .card-body p, #main #experiment .container .col-6 .card .card-body p,
+          #main #recommend .container .col-md-3 .card .card-body p, #main #recommend .container .col-6 .card .card-body p,
+          #main #proof .container .col-md-3 .card .card-body p, #main #proof .container .col-6 .card .card-body p {
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column; }
-    #main #product .container .modal-dialog .modal-content, #main #experiment .container .modal-dialog .modal-content {
+    #main #product .container .modal-dialog .modal-content,
+    #main #experiment .container .modal-dialog .modal-content,
+    #main #recommend .container .modal-dialog .modal-content,
+    #main #proof .container .modal-dialog .modal-content {
       background-color: #fff; }
-    #main #product .container .modal-dialog .modal-header, #main #experiment .container .modal-dialog .modal-header {
+    #main #product .container .modal-dialog .modal-header,
+    #main #experiment .container .modal-dialog .modal-header,
+    #main #recommend .container .modal-dialog .modal-header,
+    #main #proof .container .modal-dialog .modal-header {
       background-color: #eee;
       border-bottom: solid 1px #777; }
-    #main #product .container .modal-dialog .modal-body, #main #experiment .container .modal-dialog .modal-body {
+    #main #product .container .modal-dialog .modal-body,
+    #main #experiment .container .modal-dialog .modal-body,
+    #main #recommend .container .modal-dialog .modal-body,
+    #main #proof .container .modal-dialog .modal-body{
       border-bottom: solid 1px #777; }
-      #main #product .container .modal-dialog .modal-body img, #main #experiment .container .modal-dialog .modal-body img {
-        width: 200px;
-        height: 200px;
+      /*以下彈跳圖片大小*/
+      #main #product .container .modal-dialog .modal-body img{
+        width: auto;
+        height: auto;
         display: block;
-        margin: 0 auto; }
-      #main #product .container .modal-dialog .modal-body .intro_title, #main #experiment .container .modal-dialog .modal-body .intro_title {
+        margin: 0 auto;
+      }
+      #main #experiment .container .modal-dialog .modal-body img{
+        width: auto;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+      }
+      #main #recommend .container .modal-dialog .modal-body img{
+        width: auto;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+      }
+      #main #proof .container .modal-dialog .modal-body img{
+        width: 400px;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+      }
+
+      }
+
+      #main #product .container .modal-dialog .modal-body .intro_title,
+      #main #experiment .container .modal-dialog .modal-body .intro_title,
+      #main #recommend .container .modal-dialog .modal-body .intro_title,
+      #main #proof .container .modal-dialog .modal-body .intro_title {
         text-align: center; }
   #main #about {
     line-height: 30pt; }
     #main #about .content {
       padding: 0 10%; }
       #main #about .content h3 {
-        margin-top: 20px; }
+        margin-top: 30px; }
       #main #about .content p {
         margin: 0; }
     #main #about .mycol {
