--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,8 @@ html, body, #main {
   margin: 0;
   padding: 0;
   font-family: "微軟正黑體";
-  background-color: #ddd; }
+  background-color: #ddd;
+ text-align: justify;}
 
 #loading {
   width: 100%;
@@ -348,6 +349,7 @@ pre {
             #main #about .content p,#main #story .content p ,#main #footer .content p{
                 margin: 0;
                 font-size: 15pt;}
+
           #main #about .mycol ,#main #story .mycol{
             padding: 0 15px;
             border: solid 1px #aaa;
@@ -356,7 +358,8 @@ pre {
               font-weight: bold; }
             #main #about .mycol p ,#main #story .mycol p {
               margin: 0;
-              font-size: 15pt; }
+              font-size: 15pt;
+              text-decoration: justify;}
             #main #about .mycol img ,#main #story .mycol img{
               display: block;
               margin: 0 auto; }
